--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -133,11 +133,11 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     Beyond ``true" variation in network structure, several researchers have noted the effects of sampling intensity (e.g.,~\citealp{Martinez1999,Bluthgen2006,Bluthgen2007,Jordano2016}). An assessment of the accumulation of interactions with increasing sampling effort suggests that it is even more challenging to correctly document interactions than species~\citep{Guimera2009,Poisot2012,Bartomeus2013,Jordano2016,Giron2018,Graham2018}. As a result, it has been proposed that interactions should be described probabilistically and network metrics computed accordingly~\citep{Bartomeeus2013,Poisot2016}. Efforts in this vein usually take the form of creating model food webs that approximate observed empirical networks~\citep{Allesina2008,Guimera2009,Williams2010,Rohr2016}. These models may be based on species traits and/or abundances~\citep{Rohr2016,Weinstein2017,Weinstein2017a,Graham2018} or on simple abstract rules~\citep{Allesina2008,Guimera2009,Williams2010}. Such models provide an important ''reality check'' by allowing us to test hypotheses about the factors structuring ecological networks~\citep{Bartomeus2013,Weinstein2017.Weinstein2017a,Graham2018}. They can also allow us to estimate the numbers of interactions which have not been observed~\citep{Jordano2016,Weinstein2017a} and predict which unobserved interactions are most likely~\citep{Guimera2009,Bartomeus2013}. 
 
 
-    [[These two paragraphs try to frame our study more clearly. Any help to shorten them?]]
+    [[These two paragraphs try to frame our study more clearly]]
     To date, models incorporating uncertainty have either been very general (e.g.,~\citet{Guimera2009,Gravel2013}) or very system-specific (e.g.,~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a,Graham2018}); in either case one of these models may be a poor fit for a particular study system. Moreover, some of the system-specific models described above cannot accommodate species observed only once~\citep{Bartomeus2013,Weinstein2017}. As rare species are likely to be observed less frequently~\citep{Bluthgen2010} and may be of particular interest (e.g., when modelling species loss), there is a need for a more widely-applicable framework that includes such rare species. 
 
 
-    Here we introduce a simple Bayesian framework that can easily be adapted to different systems. First, we provide a brief description of the nested levels of uncertainty affecting ecological network construction. In the context of this uncertainty, which can be reduced but not eliminated by high-quality sampling (\citealp[see Box 1]{Bartomes2013}), we present our Bayesian framework for combining observed data with a prior expectation of network structure. We conclude with a worked example applying this framework to an intensively-sampled willow-galler network. We find that even the highest-quality empirical network we could find had substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks; especially those compiled with different sampling intensity~\citep{Weinstein2017}.
+    Here we introduce a simple Bayesian framework that can easily be adapted to different systems. First, we provide a brief description of the nested levels of uncertainty affecting ecological network construction. In the context of this uncertainty, which can be reduced but not eliminated by high-quality sampling (\citealp[see Box 1]{Bartomes2013}), we present our Bayesian framework for combining observed data with a prior expectation of network structure. We conclude with a worked example applying this framework to an intensively-sampled host-parasitoid network. We find that even the highest-quality empirical network we could find had substantial uncertainty about whether many pairs of species interact, demonstrating the need to include information about this uncertainty in published networks. We also show that this interaction-level uncertainty leads to uncertainty about estimates of network structure, with important implications for comparisons across networks; especially those compiled with different sampling intensity~\citep{Weinstein2017}.
 
 
     % Development of molecular sampling methods such as DNA barcoding hold great potential for uncovering interactions missed by other sampling methods (such as visit surveys)~\citep{Giron2018}, but these novel methods are also somewhat error-prone at present~\citep{}. 
@@ -277,7 +277,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsubsection*{Choosing a prior distribution}  
 
-      The choice of prior distribution will reflect the goal of a study, the amount of prior knowledge available, and the strength of researchers' belief in that prior knowledge. Note that there is no 'correct' prior as long as we do not know the true distribution of interaction probabilities~\citep{Spiegelhalter2000}. The goal is to select a reasonable prior that reflects our assumptions about the true distribution, and then adjust this prior with observed data as it becomes available. When in doubt, it is also possible to model interaction probabilities using a variety of priors and then compare results~\citep{Spiegelhalter2000}. Some researchers may be reluctant to adopt a Bayesian approach because of its perceived subjectivity (i.e., the metaweb we obtain will depend upon the assumptions used when developing a prior). We argue that one of the advantages of the Bayesian approach is that it makes some of the subjectivity inherent in network construction explicit. Researchers compiling empirical networks face many decisions about where to set community boundaries~\citep{}, the set of species to include in the focal community~\citep{}, what type of sampling is most appropriate~\citep{Wirta2014}, etc. All of these choices will affect the compiled network and most do not have clear answers, making all empirical networks (and all theoretical networks, which likewise depend upon the assumptions used in building the network) to some extent subjective. In addition, researchers distinguishing "forbidden links" inherently rely on prior knowledge to identify these links~\citep{Jordano2016}. Stating that an interaction is "forbidden" is, in effect, applying a very strong prior to reduce/eliminate uncertainty about the non-observation of that interaction. Given this reality, we feel it is better to make the assumptions used to build a network as explicit as possible so that these assumptions can be questioned, compared between studies, and tested. 
+      The choice of prior distribution will reflect the goal of a study, the amount of prior knowledge available, and the strength of researchers' belief in that prior knowledge. Note that there is no 'correct' prior as long as we do not know the true distribution of interaction probabilities~\citep{Spiegelhalter2000}. The goal is to select a reasonable prior that reflects our assumptions about the true distribution, and then adjust this prior with observed data as it becomes available. When in doubt, it is also possible to model interaction probabilities using a variety of priors and then compare results~\citep{Spiegelhalter2000}. Some researchers may be reluctant to adopt a Bayesian approach because of its perceived subjectivity (i.e., the metaweb we obtain will depend upon the assumptions used when developing a prior). We argue that one of the advantages of the Bayesian approach is that it makes some of the subjectivity inherent in network construction explicit. Researchers compiling empirical networks face many decisions about where to set community boundaries, the set of species to include in the focal community~\citep{Jordano2016}, what type of sampling is most appropriate~\citep{Wirta2014}, etc. All of these choices will affect the compiled network and most do not have clear answers, making all empirical networks (and all theoretical networks, which likewise depend upon the assumptions used in building the network) to some extent subjective. In addition, researchers distinguishing "forbidden links" inherently rely on prior knowledge to identify these links~\citep{Jordano2016}. Stating that an interaction is "forbidden" is, in effect, applying a very strong prior to reduce/eliminate uncertainty about the non-observation of that interaction. Given this reality, we feel it is better to make the assumptions used to build a network as explicit as possible so that these assumptions can be questioned, compared between studies, and tested. 
 
 
       \textbf{Uninformative priors}
@@ -308,16 +308,14 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 
   \subsection*{An empirical example}
-    [[Make the point of this clearer]]
+
       To illustrate the process of constructing a Bayesian network to quantify uncertainty about interactions, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S4} for details). 
       The high spatiotemporal resolution of this dataset make it ideal for illustrating the difficulties in completely sampling a network; even with such an unusually high sampling effort, we anticipate that there will be many pairs of species which were rarely or never observed together. Using the Bayesian framework above, we can identify which potential interactions are more and less uncertain, allowing us to better predict the true structure of the metaweb. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We then calculated an empirical prior and computed the posterior distribution of the probability of an as-yet-unobserved interaction being feasible ($\lambda$).
       We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S5} for \emph{Salix}-galler results).
 
 
-      Unlike~\citet{Bartomeus2013,Weinstein2017,Weinstein2017a}, our model can include interactions for species which were observed infrequently (or not at all) during sampling. 
-
     \subsubsection*{Computing the prior and posterior distributions}
-      [[Remove the network I used for the prior from the rest of the analyses.]]
+
         To treat each interaction as a Bayesian probability, we will combine the observed data with a distribution based on prior information. While a strict Bayesian framework requires a prior distribution that does not rely on any information from the study at hand, such data are not always available. In that case, researchers must choose between using a less-informative prior (e.g., one based on distributions of links across a large set of networks) or an empirical prior based on some "training data" from the study. Here, we opted for the latter and created priors using a single sub-network from the middle of the geographical distribution of the~\citet{Kopelke2017} dataset. To demonstrate how the use of data from a different system can affect the prior distribution and conclusions based on it, we repeated our analyses using priors derived from a much smaller \emph{Salix}-galler-natural enemy system based around genotypes of a single \emph{Salix} species~\citep[Data available from the Dryad Digital Repository: https://doi.org/10.5061/dryad.g7805]{Barbour2016}\nocite{Barbour2016Dryad}. This smaller system was much more densely-connected than that described in~\citet{Kopelke2017} and provided unreasonable distributions for interaction probabilities (\emph{Appendix S6}). 
 
 
@@ -329,12 +327,10 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsubsection*{Scaling up to network metrics}
 
-      [[Need to make it clear why we're doing this.]]
-
-      Researchers usually use interaction matrices as a tool to calculate measures of network structure. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera209}.
+      Researchers are often interested in measures of network structure rather than the network itself. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Thus, any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera209}.
 
 
-      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. 
+      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. This gives us an estimate for each property reflecting our uncertainty about $\lambda$.
 
 
       Measures of network structure which are based on empirical networks that are missing interactions may differ substantially from the values that would be obtained if detection certainty and variation in interactions over space and time could be removed. To demonstrate this, we created a suite of filtered networks for each posterior network. Taking a posterior network as the "true" network, we randomly sampled 90\%, 80\%, 70\%, 60\%, 50\%, 40\%, 30\%, 20\%, and 10\% of the interactions to create a new "filtered" network. This gradient is akin to a gradient of uncertainty in the network (e.g., due to varying sampling effort or intraspecific trait variability). For each level of uncertainty, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 filtered networks). We calculated the same network properties as described above for all posterior and filtered networks.
@@ -345,7 +341,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   In the \emph{Salix}-based food webs sampled by~\citet{Kopelke2017}, most pairs of gallers and natural enemies (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
 
 
-  We obtained prior parameters of $\alpha$=0.700, $\beta$=8.49. Where $n = 0$, these parameters gave a posterior distribution with $\bar\lambda$=0.076, var($\lambda$)=0.008. When $n = 374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76. This distributions is very close to 0 with small variance about $\lambda$; if species $i$ and $j$ co-occurred 374 times without interacting, they   are extremely unlikely to do so at other sites or times. 
+  We obtained prior parameters of $\alpha$=0.700, $\beta$=8.49, giving a beta distribution strongly skewed towards 0. Where $n=0$, these parameters gave a posterior distribution with $\bar\lambda$=0.076, var($\lambda$)=0.008. When $n=374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76$\times10^6$. This distributions is very close to 0 with small variance about $\lambda$; if species $i$ and $j$ co-occurred 374 times without interacting, they are extremely unlikely to do so at other sites or times. 
 
 
   For most pairs of species $i$ and $j$, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S9}). To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.01 would require 15, 39, and 229 observed co-occurrences, respectively. Note that these are relatively large sample sizes compared to currently-available empirical networks (e.g.,~\citealp{Morris2014}).
@@ -360,20 +356,18 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   A benefit of Bayesian estimation is that it allows us to make our assumptions more explicit (e.g., assuming that funding source for a medical trial may affect the reported outcome~\citep{Spiegelhalter2000}).
 
 
-  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a,Weinstein2017}. This dataset also illustrates the problem of pairs of species which were observed interacting did not interact in all of the samples in which they co-occurred. Increasing sampling is therefore likely to add more zeros than ones to an interaction network.
+  Real interaction networks vary over several dimensions~\citep{Kitching1987,Olesen2011a,Pires2011a,Baiser2012,Fodrie2015,Novak2015}, leading to pervasive under-estimation of interactions in published networks~\citep{Jordano2016}. Even in the most extensive data set that we could find, there was very little empirical data for each species pair. Most pairs of species were not observed co-occurring even once, less than 10\% of species pairs were observed interacting, and no pairs were observed to co-occur frequently enough to conclude that their probability of interacting was below 0.01. This suggests that limited sampling is a major source of uncertainty in empirical networks, in agreement with~\citet{Jordano2016,Weinstein2017a,Weinstein2017}. 
 
 
   Detectability estimated at 23.3\% in~\citet{Weinstein2017a}
 
-  [[rephrase to make these more clearly about OUR results]]
-  Using prior knowledge to build a Bayesian distribution for each interaction probability allows us to set appropriate bounds on interaction probabilities for species which were rarely or never observed co-occurring. In such cases, an informative prior distribution gives us more reasonable estimates of interaction probabilities than assuming that $p$=0 for unobserved interactions. This approach is particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
+  Although 374 sampling sites were not enough to obtain sufficient observations of all species pairs, we were able to reduce uncertainty about many potential interactions using a simple Bayesian framework. This framework allowed us to set appropriate confidence intervals about the probability of an unobserved interaction occurring, based on the distribution of interactions in one sample site. This gives us more reasonable estimates of interaction probabilities than assuming that no unobserved interactions actually occur. Such an approach is particularly useful when considering interactions involving species entering new ranges due to climate change or introductions. Understanding these species' interactions is important for a variety of conservation questions~\citep{Bartomeus2013,Gravel2013}, and a Bayesian approach using a trait-matching model or data from species' current ranges could help us to anticipate how species will integrate into new communities. 
 
 
-  Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. If our descriptions of empirical systems are missing up to half of the feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability~\citep{other studies pointing out poor detectability}.[[Add citations?]]
-  ~\citep{Jordano2016,Weinstein2017a}[[for poor detectanility - 50\% to 23\%]]
-  ~\citep{Bartomeus2013}[[had 59\% of interactions detected]]
+  Our results also demonstrate how incomplete detection of interactions scales up to affect network structure. The structure of the well-sampled network used in our case study is most similar to the structure of simulated networks including only 50\% of the interactions suggested by the posterior distribution of interaction probabilities. This poor detection rate is similar to that reported in other studies~\citep{Bartomeus2013,Jordano2016,Weinstein2017a}. If our descriptions of empirical systems are generally missing so many feasible interactions, then it is vital to acknowledge this inherent uncertainty before comparing structures across systems or relating structure to stability.
 
-  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. Observing all interactions in a network is likely impossible~\citep{Jordano2016}, but researchers can take steps to address the uncertainty this implies. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, researchers should acknowledge the varying levels of confidence surrounding interactions between species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable. Where there are strong prior expectations about pairs of species that will not interact, these should be explicitly stated so that readers know which zeros in an interaction matrix are based on observed data and which are based primarily upon expert knowledge. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
+
+  Based on the framework described above, we can now offer some recommendations for improved descriptions of ecological interactions. Observing all interactions in a network is likely impossible~\citep{Jordano2016}, but researchers can take steps to address the uncertainty this implies. First, sample sizes should be as large as possible in order to reduce detection uncertainty. Second, researchers should acknowledge the varying levels of confidence surrounding interactions between species pairs. Including the $n$ and $k$ values for each interaction will clearly indicate which unobserved interactions are most likely to be observed with further sampling and which estimates are more reliable, as well as indicating potential sampling biases. Where there are strong prior expectations about pairs of species that will not interact, these should be explicitly stated so that readers know which zeros in an interaction matrix are based on observed data and which are based primarily upon expert knowledge. Third, the uncertainty around interactions should be incorporated in calculations of network properties. Re-sampling networks based on a probabilistic understanding of networks is straightforward and gives distributions for network properties rather than point estimates. This not only acknowledges the fact that interactions vary over time and space but will also facilitate comparisons between networks by adding confidence intervals to estimates of network properties. This will allow us to say whether networks have different structures \emph{and} whether those differences are greater than we would expect given the inherent variability of interactions. To facilitate the practical application of these recommendations, we provide all code used in this paper in the supplementary material. 
 
 
 \section*{Acknowledgements}
@@ -427,7 +421,7 @@ All data used in this study have been independently published and are accessible
   \begin{figure}[h!]
     \caption{Imperfect detection of interactions increases the number of samples required to be confident that an interaction never occurs. Assume that two species cannot interact (i.e., $\lambda=0$) and that the number of observed interactions follows a binomial distribution depending upon the number of observed interactions $k$ and observed co-occurrances $n$. The maximum likelihood estimate (MLE) for $\lambda$ is $\lambda_{MLE}=\frac{k}{n}$. Note that $\lambda$ is not a point estimate but rather a random variable with an unknown distribution. This means that if $k = 0$ in a given sample, this does not necessarily imply that the two species will never interact. Rather, $k = 0$ implies that `no interaction' is the most likely outcome when the species do co-occur but there is nonetheless some chance that the two species \emph{could} interact.\\
     Importantly, we can estimate the variance of $\lambda$ as well as the MLE; available methods include the \emph{Wilson score interval}, the \emph{Clopper-Pearson interval}, and the \emph{Agresti-Coull interval} (for details, see [\citealp{Brown2001}]).
-    Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high \emph{unless} we have some other reason to believe that an interaction cannot occur.}
+    Here we show the upper bound (solid black line) of a 95\% Clopper-Pearson true credible interval for the interaction probability $\lambda$ for a pair of species that has been observed co-occurring $n$ times but never interacting ($k = 0$). The upper limit of the credible interval only reaches 0.1 (dashed, red line) with 35 observations. Thus, adding more observations is useful in controlling uncertainty, but the number of observations added must be very high unless we have some other reason to believe that an interaction cannot occur (i.e., a strong prior).}
     \label{upper_limits}
     \begin{center}
     \includegraphics*[width=.8\textwidth]{figures/upper_limit_DG.eps}
